@@ -1,3 +1,9 @@
+2012-02-16 Borut Razem <borut.razem AT gmail.com>
+
+	* support/sdbinutils/include/opcode/sparc.h,
+	  support/sdbinutils/include/aout/sun4.h:
+	  added for NetBSD/sparc64 bfd build
+
 2012-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/main.c (hasExtBitOp),
